# core-pattern-ai-pipeline

./: README.md  README1.md  requirements.txt  setup.py
configs/: config.yaml
model/lora_finetuned/: train_lora.py  utils.py
notebooks/: exploration.ipynb
project/: LICENSE  main.py  pyproject.toml
project/configs/: default_config.json
project/model/lora_finetuned/: lora.py
project/src/: __init__.py  fibonacci_compressor.py  rl_expander.py
project/tests/: test_dashboard_utils.py  test_fibonacci_compressor.py  test_graph_utils.py  test_pipeline_manager.py
scripts/: run_pipeline.py
src/: core_pattern_learner.py  dashboard.py  feedback_db.py  graph_utils.py  llm_integration.py  pipeline_manager.py  universal_graph_converter.py  visualization.py  wavelet_transformer.py
src/utils/: dashboard_utils.py
tests/: test_core_pattern_learner.py  test_feedback_db.py  test_llm_integration.py  test_rl_expander.py  test_visualization.py  test_wavelet_transformer.py  teststest_universal_graph_converter.py.py
