[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "core_pattern_ai_pipeline"
version = "0.1.0"
description = "An AI pipeline inspired by natural processes using wavelets, graphs, GATs, and Fibonacci logic with LLM explanations and user feedback."
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "networkx",
    "torch",
    "transformers",
    "tqdm",
    "pandas",
    "flask",
    "sqlalchemy"
]

[project.optional-dependencies]
dev = ["pytest", "jupyter", "black", "flake8"]
